packages/fuels-macros/tests/ui/abigen/invalid_program_type.stderr
error: 'SomeInvalidProgramType' is not a valid program type. Expected one of: 'Script', 'Contract', 'Predicate'.
 --> tests/ui/abigen/invalid_program_type.rs:3:9
  |
3 | abigen!(SomeInvalidProgramType(
  |         ^^^^^^^^^^^^^^^^^^^^^^
