packages/fuels-macros/tests/ui/abigen/invalid_program_type.rs
use fuels_macros::abigen;

abigen!(SomeInvalidProgramType(
    name = "SomeName",
    abi = "some-abi.json"
));

fn main() {}
